--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.11",
     "qr-image": "^3.2.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
